// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Organizers reducer Should return the default state 1`] = `
{
  "blocks": {
    "allIds": [],
    "byId": {},
  },
  "classic": [],
}
`;

exports[`[STORE] - Organizers reducer Should set the initial state 1`] = `
{
  "blocks": {
    "allIds": [],
    "byId": {},
  },
  "classic": [
    99,
    100,
  ],
}
`;
